# maas-rs

./: .envrc  .gitignore  .woodpecker.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.yaml  docker-compose.yaml  flake.nix  rust-toolchain.toml
.gitea/issue_template/: bug.md  feature.md
presets/: README.md  belgium.md  belgium.yaml
src/: cli.rs  lib.rs  logging.rs  main.rs
src/ingestion/: cache.rs  mod.rs  secrets.rs
src/ingestion/address/: mod.rs
src/ingestion/address/bestadd/: convert.rs  mod.rs  parse.rs
src/ingestion/bestadd/: convert.rs  parse.rs
src/ingestion/gtfs/: gtfs.rs  mod.rs  sncb.rs  stib.rs  utils.rs
src/ingestion/osm/: bike_class.rs  elevation.rs  elevation_smooth.rs  lambert.rs  mod.rs  pbf.rs  platforms.rs
src/ingestion/realtime/: fetcher.rs  gtfs_rt.rs  mod.rs  proto.rs  stib.rs
src/ingestion/realtime/fixtures/: stib_vehicle_positions.json
src/routing/: mod.rs  routing.rs  routing_astar.rs  routing_raptor.rs
src/services/: build.rs  fingerprint.rs  mod.rs  persistence.rs  realtime_poller.rs  rebuild.rs  scheduler.rs
src/structures/: address.rs  bike_attrs.rs  bike_profile.rs  config.rs  delay.rs  edge.rs  geo.rs  graph.rs  mod.rs  mode.rs  node.rs  raptor.rs  realtime.rs  routingparameters.rs  street_time.rs  surface_speed.rs
src/structures/cost/: agglomeration.rs  axis.rs  fares.rs  mod.rs  mode_axes.rs  variance.rs
src/structures/graph/: astar.rs  bike_cost.rs  contraction.rs  edge_index.rs  latency_profile.rs  mod.rs  multiobj.rs  multiobj_plan.rs  path_distribution.rs  platform_reach.rs  railway.rs  raptor_access.rs  raptor_backward.rs  raptor_build.rs  raptor_cch.rs  raptor_index.rs  raptor_plan.rs  raptor_route.rs  realtime_match.rs  representatives.rs  street_enrich.rs  transit.rs  travel_map.rs
src/structures/plan/: agency.rs  leg.rs  leg_option.rs  leg_step.rs  mod.rs  node.rs  place.rs  plan.rs  route.rs  trip.rs
src/web/: app.rs
src/web/static/: debug.html  index.html  maas.js  manifest.webmanifest  map.html  sw.js  travel_map.html
src/web/static/js/: headway.test.mjs  live-bridge.test.mjs  live-db.mjs  live-logic.mjs  live-logic.test.mjs  live-mem.mjs  live-mem.test.mjs  live-store.mjs  live-store.test.mjs  live-view.mjs  qr.test.mjs  station-rank.mjs  station-rank.test.mjs  time-fmt.test.mjs  travel-map.mjs  travel-map.test.mjs
tests/: graph_tests.rs  graphql_tests.rs  next_day_fallback_tests.rs  travel_map_tests.rs
tools/ui-smoke/: smoke.mjs
