[package]
name = "maas-rs"
version = "0.0.1"
edition = "2024"

[dev-dependencies]
gtfs-structures = "0.46.1"
chrono = "0.4.43"
poem = { version = "3.1.12", features = ["test"] }

[dependencies]
osmpbf = "0.3"
kdtree = { version = "0.8.0", features = ["serialize"] }
priority-queue = "2.7.0"
gtfs-structures = "0.46.1"
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
poem = "3.1.12"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
async-graphql = { version = "7.2.1", features = ["graphiql"] }
async-graphql-poem = "7.2.1"
ureq = "2"
cron = "0.12"
sha2 = "0.10"
zip = "2"
arc-swap = "1"
prost = "0.14"
serde_json = "1"
serde_yaml_ng = "0.10"
tiff = "0.9"
rstar = "0.13"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
