[package]
name = "maas-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Multi-modal, multi-objective routing engine for Belgium (RAPTOR transit + Pareto street search) with a GraphQL API and web UI."
repository = "https://codeberg.org/Bhasher/maas-rs"
homepage = "https://codeberg.org/Bhasher/maas-rs"

[dev-dependencies]
gtfs-structures = "0.46.1"
chrono = "0.4.43"
poem = { version = "3.1.12", features = ["test"] }

[dependencies]
osmpbf = "0.3"
routingkit-cch = "=0.1.4"
kdtree = { version = "0.8.0", features = ["serialize"] }
priority-queue = "2.7.0"
gtfs-structures = "0.46.1"
chrono = "0.4.43"
chrono-tz = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
poem = "3.1.12"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
async-graphql = { version = "7.2.1", features = ["graphiql"] }
async-graphql-poem = "7.2.1"
ureq = "2"
cron = "0.12"
sha2 = "0.10"
zip = "2"
arc-swap = "1"
prost = "0.14"
serde_json = "1"
serde_yaml_ng = "0.10"
tiff = "0.9"
rstar = "0.13"
proj4rs = "0.1.10"
quick-xml = "0.41"
fst = { version = "0.4.7", features = ["levenshtein"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
